# PandoraLauncher-Enhanced

./: .gitignore  Cargo.toml  README.md  cargo-wrap.sh
.github/workflows/: build.yml  cd.yml  update_manifest.yml
crates/auth/: Cargo.toml
crates/auth/src/: authenticator.rs  constants.rs  credentials.rs  lib.rs  models.rs  secret.rs  serve_redirect.rs
crates/backend/: Cargo.toml
crates/backend/src/: account.rs  backend.rs  backend_filesystem.rs  backend_handler.rs  directories.rs  install_content.rs  instance.rs  launch.rs  lib.rs  log_reader.rs  mod_metadata.rs  persistent.rs  server_list_pinger.rs  shortcut.rs  skin_manager.rs  syncing.rs  update.rs
crates/backend/src/launcher_import/: mod.rs
crates/backend/src/metadata/: items.rs  (+1 more)
crates/bridge/: Cargo.toml
crates/bridge/src/: account.rs  import.rs  install.rs  instance.rs  keep_alive.rs  lib.rs  message.rs  meta.rs  modal_action.rs  safe_path.rs
crates/frontend/: Cargo.toml
crates/frontend/locales/: locales.yml
crates/frontend/src/: data_asset_loader.rs  icon.rs  interface_config.rs  lib.rs  png_render_cache.rs  processor.rs  root.rs  skin_renderer.rs  ui.rs
crates/pandora_launcher/: Cargo.toml
crates/pandora_launcher/src/: main.rs  panic.rs
crates/reqwest_client/: Cargo.toml
crates/reqwest_client/src/: reqwest_client.rs
crates/schema/: Cargo.toml
crates/schema/src/: auxiliary.rs  backend_config.rs  content.rs  curseforge.rs  forge_mod.rs  instance.rs  lib.rs  loader.rs  modrinth.rs  mrpack.rs  resourcepack.rs  version.rs
scripts/: build_linux.sh  build_mac.sh  build_windows.sh
(+55 files in other folders)
