[package]
name = "reqwest_client"
version = "0.4.0-preview0"
publish = false
license = "Apache-2.0"
edition = "2024"

[lib]
path = "src/reqwest_client.rs"

[dependencies]
gpui.workspace = true
anyhow.workspace = true

reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
bytes = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
regex = "1.5"

[dev-dependencies]
gpui.workspace = true
